# xkiver

./: .gitignore  CMakeLists.txt  README
examples/: CMakeLists.txt  two_triangles.cc  x11_gui.cc
xkiver/: CMakeLists.txt  clip.cc  clip.h  constants.h  framebuffer.cc  framebuffer.h  rasterizer.cc  rasterizer.h  transform.cc  transform.h  triangle.cc  triangle.h  utils.cc  utils.h
xkiver/base/: obj_loader.h  types.h
xkiver/display/: linux.cc  platform.h
